2005-12-05 Scott Dattalo <scott@dattalo.com>

	* gui/gui_src_asm.cc: Source browser crashed if there was no
	instruction at the current PC.

	* regression/instructions_16bit/18f452.lkr: mchip stock linker
	script has a bug with hard coded interrupt routine size.

2005-12-04 Robert Pearce <rob@bdt-home.demon.co.uk>

	* src/p12.cc, src/p12.h: Added pullups to 12bit-core I/O pins

2005-12-03 Robert Pearce <rob@bdt-home.demon.co.uk>

	* src/p12.cc, src/p12.h, src/pic-processors.cc,
	src/pic-processors.h: Added the 10F202.

2005-12-02 Scott Dattalo <scott@dattalo.com>
	* eeprom.cc, eeprom.h, i2c-ee.cc, i2c-ee.h, registers.cc,
	registers.h, processors.cc:
	Extended the RegisterCollection class to support an arbitrary
	array of Registers. Added CLI access to the EEPROM.
	Usage:
	   eeData 
	shows all eeprom registers.
	   eeData[expression] 
	shows one or several eeprom registers.
	* packages.cc, packages.h: Added better support for module pin
	placement.
	* gui/gui.h, gui/gui_breadboard.cc, gui/gui_breadboard.h,
	gui/gui_main.cc: Cleaned up package creation in preparation for
	a graphic LCD module.


2005-11-27 Borut Razem <borut.razem@siol.net>

	* plat/win32/gpsim.nsi, plat/win32/make.mingw, cli/makefile.mingw,
	  gpsim/makefile.mingw, gui/makefile.mingw, modules/makefile.mingw,
	  src/makefile.mingw, regression/README: MINGW sync

2005-11-22 J.R. Heisey <jrheisey@sourceforge.com>
	* cli\cmd_log.cc gui\gui_regwin.cc src\init.cc src\pic-processor.cc,
	src\trace.cc src\trace.h: Changed references of trace_log to
	GetTraceLog() to decouple the global trace_log in the libgpsim.so/dll
	from the executable. Please do the same with any other globals
	you find and that I missed.

	src\expr.cc: Implemented dumping a range of an indexed variable
	using the integer range operator. (i.e. ramData[3:20]

2005-11-21 J.R. Heisey <jrheisey@sourceforge.com>
	* src\symbol.cc src\symbol.h src\ValueCollections.cc
	src\ValueCollections.h: Fixed couple bugs and added additional